--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,13 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
+
+dependencies {
+    testImplementation 'org.testng:testng:7.1.0'
+
+}
+
+test {
+    useTestNG()
+}
+
